update BSD to MIT

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "generator-gulp-happy-mobile-webapp",
   "version": "0.0.1",
   "description": "Scaffold out a front-end mobile web app",
-  "license": "BSD",
+  "license": "MIT",
   "repository": "zerob13/generator-gulp-happy-mobile-webapp",
   "author": "zerob13",
   "main": "app/index.js",
